# stock-review

./: .gitignore  README.md  config.akshare.example.json  config.csv.example.json  config.example.json  pyproject.toml  review.py
data.example/: lhb.csv  quotes.csv  sectors.csv
stock_review/: __init__.py  lark.py  models.py  report.py  scoring.py
stock_review/providers/: akshare_provider.py  csv_provider.py  sample_provider.py
