[project]
name = "stock-review-system"
version = "0.1.0"
description = "A-share after-close review system with AKShare data and Lark webhook output."
requires-python = ">=3.11,<3.12"
dependencies = [
    "akshare==1.18.64",
    "pandas==3.0.3",
]

[tool.uv]
package = false

[dependency-groups]
dev = []
